2002-02-11  Jorn Baayen  <jorn@nl.linux.org>

	* libgnomeui/gnome-icon-item.c: use base_gc rather than bg_gc to
	draw the background color of the selected item.

2002-02-11  Iain Holmes  <iain@ximian.com>

	* gnome-popup-menu.c (gnome_popup_menu_attach): Add GDK_KEY_PRESS_MASK
	to the ev_widget. Connect to the popup-menu signal.
	(popup_menu_pressed): Call the real_popup_button_pressed function with
	ev == NULL.

2002-02-11  Anders Carlsson  <andersca@gnu.org>

	* gnome-about.c: Use a separate credits dialog, also fix some bugs.

	* gnome-pixmap-entry.c: Update to account for GtkFileSel changes.

	* gnome-dateedit.c: Remove broken forall function.

2002-02-10  Anders Carlsson  <andersca@gnu.org>

	* gnome_segv.c: Apply patch from Shingo Akagaki to make gnome_segv UTF-8 safe,
	also make program name UTF-8 safe.

	* gnome-ui-init.c (libgnomeui_post_args_parse): Call gnome_stock_icons_init
	after setting the codeset.
	(libgnomeui_rc_parse): rc files are called gtkrc-2.0 now.

	* gnome-stock-icons.c (get_default_icons): Actually add the
	GNOME_STOCK_MAIL_NEW and GNOME_STOCK_BOOK_OPEN to the icon factory.

	* gnome-ui-init.c (libgnomeui_post_args_parse): 
	Call bind_textdomain_codeset.

2002-01-16  Richard Hult  <rhult@codefactory.se>

	* gnome-app-helper.c (gnome_app_setup_toolbar): Remove unused
	variable.

	* gnome-about.c (gnome_about_free_person_list): Fix build.

2002-01-16  Anders Carlsson  <andersca@gnu.org>

	* gnome-about.c: 
	Make the about box a bit nicer.
	
	* gnome-app-helper.c: (setup_image_menu_item),
	(gnome_app_fill_menu_custom), (gnome_app_create_menus_custom),
	(per_app_toolbar_style_changed_notify),
	(toolbar_style_changed_notify), (style_menu_item_activated),
	(global_menu_item_activated), (create_and_popup_toolbar_menu),
	(button_press), (gnome_app_setup_toolbar):
	Update for new gconf schemas.
	
	* gnome-app.c: (gnome_app_instance_init), (gnome_app_set_menus),
	(gnome_app_set_toolbar):
	Update for new gconf schemas.
	