@@ -1,3 +1,7 @@
+2002-02-11  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-ui-init.c (libgnomeui_pre_args_parse): Remove setlocale hack.
+
 2002-02-11  Jorn Baayen  <jorn@nl.linux.org>
 
 	* libgnomeui/gnome-icon-item.c: use base_gc rather than bg_gc to
